# personal_memory_system

./: .gitignore  README.md  USER_MANUAL.md  app_info.py  build.bat  build.py  build_installer.py  config.yaml  installer.py  manager.py  pyproject.toml  requirements.txt  run_api.py  run_editor.py  run_mcp.py  run_server.py  skill.md
docs/: PMS_Product_Spec_v0.1.docx  USER_MANUAL.md
pms/api/: config.py  db.py  main.py  models.py
pms/api/routers/: admin.py  ingest.py  memory.py  retrieve.py
pms/api/services/: browser_poller.py  consolidator.py  embedder.py  file_watcher.py  ltm.py  mtm.py  scheduler.py  stm.py
pms/editor/: api_client.py  app.py  i18n.py  languages.xlsx  prefs.py
pms/editor/views/: __init__.py  dashboard.py  log_view.py  ltm_view.py  mtm_view.py  settings_view.py  stm_view.py
pms/mcp/: server.py
pms/server/: main.py
pms/server/routers/: admin.py  ingest.py  memory.py  retrieve.py
pms/service/: browser_poller.py  consolidator.py  db.py  embedder.py  file_watcher.py  ltm.py  mtm.py  scheduler.py  stm.py
tests/: conftest.py  test_api.py  test_browser_poller.py  test_consolidator.py  test_file_watcher.py  test_ltm.py  test_mtm.py  test_scheduler.py  test_stm.py
