[project]
name = "personal_memory_system"
version = "0.6.0"
description = "Privacy-first personal memory augmentation layer for Windows"
requires-python = ">=3.11"
authors = [{ name = "Ted Hsieh", email = "ted1966@gmail.com" }]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "lancedb>=0.8.0",
    "pyarrow>=16.0.0",
    "apscheduler>=3.10.4",
    "watchdog>=4.0.0",
    "customtkinter>=5.2.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.backends.legacy:build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
